--- a/index.html
+++ b/index.html
@@ -2,82 +2,102 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <title>The Fitness Studio</title>
-  <!-- For Font awesome icons-->
-  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>The Fitness Studio</title>
+    <!-- For Font awesome icons-->
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-  <div class="container">
-    <div class="navbar">
-      <div class="navbar_list">
-        <ul>
-          <li class="list"><a href="">Home</a></li>
-          <li class="list"><a href="">About</a></li>
-          <li class="list"><a href="">Instructors</a></li>
-          <li class="list"><a href="">Blog</a></li>
-          <li class="list"><a href="">Book Online</a></li>
-          <li class="list"><a href="">Contact</a></li>
+    <!--    <nav class="navbar navbar-secondary bg-light  navbar-expand-sm">
+      <buttton class="navbar-toggler " data-toggle="collapse" target="#navbarNav"><span class="navbar-toggler-icon"></span></buttton>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <!-- we can also use justify-content-end to move the navbar content to the right end -->
+    <!--    <ul class="navbar-nav">
+          <!-- ml-auto makes the margin at the left side of the collapse button auto and shift it to the right side -->
+    <!--      <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Instructors</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Book Online</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
         </ul>
       </div>
-      <div class="navbar_icon clear">
-        <span class="fab fa-facebook-f"></span>
-        <span class="fab fa-twitter"></span>
-        <span class="fab fa-instagram"></span>
-      </div>
+  </nav> -->
+
+    <div class="layer">
+        <div class="navbar">
+            <div class="navbar_list">
+                <ul>
+                    <li class="list"><a href="#" class="active">Home</a></li>
+                    <li class="list"><a href="#">About</a></li>
+                    <li class="list"><a href="#">Instructors</a></li>
+                    <li class="list"><a href="#">Blog</a></li>
+                    <li class="list"><a href="#">Book Online</a></li>
+                    <li class="list"><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="navbar_icon clear">
+                <span class="fab fa-facebook-f"></span>
+                <span class="fab fa-twitter"></span>
+                <span class="fab fa-instagram"></span>
+            </div>
+        </div>
     </div>
-  </div>
 
-  <div class="bg_img1">
-    <div class="header_dark_1">Balanced mind in a balanced body</div>
-    <div class="subtitle_1">POWERHOUSE FITNESS</div>
-    <div class="button">Book Now</div>
-  </div>
-
-  <div class="background_dark">
-    <div class="header_light">ABOUT</div>
-    <div class="subtitle_2">About Powerhouse Fitness</div>
-    <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut asperiores, ducimus laborum est itaque hic harum, sapiente at, pariatur voluptatem unde debitis dignissimos odit odio veniam neque provident atque nisi reiciendis magnam velit quia. Molestiae
-      nobis, voluptatum aspernatur. Impedit rem, provident excepturi deserunt dolores eum.<br><br> Consequatur cumque itaque necessitatibus animi quibusdam labore architecto libero, debitis molestiae nobis velit eveniet eligendi laudantium consectetur
-      sed voluptates sapiente quis assumenda quisquam quod unde blanditiis consequuntur totam. Impedit, ipsum quo amet repellat dicta dolorem nostrum quis similique aut in, minima at corporis tenetur quae recusandae, nisi vero autem, pariatur cumque officiis
-      dolores laboriosam atque?</div>
-  </div>
-
-  <div class="bg_img2">
-    <div class="header_dark_2">INSTRUCTORS</div>
-    <div class="cards">
-      <div class="trainer1">
-        <div class="img1"></div>
-        <div class="subtitle_3">Naomi Kettler</div>
-        <div class="subtitle_4">PERSONAL TRAINER</div>
-        <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur, neque ad at vitae! Quaerat alias, quia veritatis consequuntur dolorum voluptate autem inventore repudiandae id ea repellat! Cum ipsa omnis impedit. Lorem ipsum dolor sit amet,
-          consectetur adipisicing elit. A aperiam debitis sed totam excepturi quia cum officiis aspernatur culpa eveniet.</div>
-      </div>
-      <div class="trainer2">
-        <div class="img2"></div>
-        <div class="subtitle_3">Anna Stewart</div>
-        <div class="subtitle_4">PERSONAL TRAINER</div>
-        <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur, neque ad at vitae! Quaerat alias, quia veritatis consequuntur dolorum voluptate autem inventore repudiandae id ea repellat! Cum ipsa omnis impedit. Lorem ipsum dolor sit amet,
-          consectetur adipisicing elit. Autem officiis quae expedita voluptate esse, a mollitia hic deleniti aperiam quo!</div>
-      </div>
+    <div class="bg_img1">
+        <div class="header_dark_1">Balanced mind in a balanced body</div>
+        <div class="subtitle_1">POWERHOUSE FITNESS</div>
+        <div class="button">Book Now</div>
     </div>
-  </div>
 
-  <div class="background_light">
-    <div class="header_dark_1">Wake up and Workout.</div>
-  </div>
+    <div class="background_dark">
+        <div class="header_light">ABOUT</div>
+        <div class="subtitle_2">About Powerhouse Fitness</div>
+        <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut asperiores, ducimus laborum est itaque hic harum, sapiente at, pariatur voluptatem unde debitis dignissimos odit odio veniam neque provident atque nisi reiciendis magnam velit quia. Molestiae nobis, voluptatum aspernatur. Impedit rem, provident excepturi deserunt dolores eum.<br><br> Consequatur cumque itaque necessitatibus animi quibusdam labore architecto libero, debitis molestiae nobis velit eveniet eligendi laudantium consectetur sed voluptates sapiente quis assumenda quisquam quod unde blanditiis consequuntur totam. Impedit, ipsum quo amet repellat dicta dolorem nostrum quis similique aut in, minima at corporis tenetur quae recusandae, nisi vero autem, pariatur cumque officiis dolores laboriosam atque?</div>
+    </div>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <div class="bg_img2">
+        <div class="bg_layer">
+            <div class="header_dark_2">INSTRUCTORS</div>
+            <div class="cards">
+                <div class="trainer1">
+                    <div class="img1"></div>
+                    <div class="subtitle_3">Naomi Kettler</div>
+                    <div class="subtitle_4">PERSONAL TRAINER</div>
+                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur, neque ad at vitae! Quaerat alias, quia veritatis consequuntur dolorum voluptate autem inventore repudiandae id ea repellat! Cum ipsa omnis impedit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam debitis sed totam excepturi quia cum officiis aspernatur culpa eveniet.</div>
+                </div>
+                <div class="trainer2">
+                    <div class="img2"></div>
+                    <div class="subtitle_3">Anna Stewart</div>
+                    <div class="subtitle_4">PERSONAL TRAINER</div>
+                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur, neque ad at vitae! Quaerat alias, quia veritatis consequuntur dolorum voluptate autem inventore repudiandae id ea repellat! Cum ipsa omnis impedit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem officiis quae expedita voluptate esse, a mollitia hic deleniti aperiam quo!</div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-  <script>
-    window.jQuery || document.write('<script src="js/jquery-3.3.1.js"><\/script>');
-  </script>
+    <div class="background_light">
+        <div class="header_dark_1">Wake up and Workout.</div>
+    </div>
 
-  <script src="js/script.js"></script>
+    <!--  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
+    <script>
+        window.jQuery || document.write('<script src="js/jquery-3.3.1.js"><\/script>');
+
+    </script>
+
+    <script src="js/script.js"></script>
 
 </body>
 
